# SDR-for-Android-lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle.kts
java/fr/intuite/rtlsdrbridge/: DeviceCategory.kt  RtlSdrBridgeWrapper.kt
java/fr/intuite/sdr/: DeviceCategory.kt
java/fr/intuite/sdr/bridge/: SDRBridge.kt
src/: bridge-config.h  rtl-sdr-bridge-java.cpp  rtl-sdr-bridge-preferences.h  sdr-bridge-internal.h  sdr-bridge-java-soapy.cpp  sdr-logger.cpp  sdr-logger.h  ssb_demod_opt.cpp
src/dsp/: fft_process.cpp  fft_process.h  spectral_pulse_detector.cpp  spectral_pulse_detector.h
src/main/assets/profiles/: compatible_devices.json
src/ssb/: audio_pulse_detector.cpp  audio_pulse_detector.h  ssb_demod.cpp  ssb_demod.h  ssb_demod_boost.cpp  ssb_demod_boost.h  ssb_demod_high.cpp  ssb_demod_high.h  ssb_demod_opt+boost.cpp  ssb_demod_opt+boost.h  ssb_demod_opt.cpp  ssb_demod_opt.h  ssb_processor.cpp  ssb_processor.h
